dailyLog/src/main/java/com/example/dailyLog/exception/commonException/error/ErrorCode.java
package com.example.dailyLog.exception.commonException.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    HttpStatus getHttpStatus();
    String getMessage();
}
